updated controllers tests